erDiagram
    USER ||--|| MASTER_PROFILE : has
    USER ||--o{ BOOKING : creates
    USER ||--o{ SUBSCRIPTION : has
    USER ||--o{ QUIZ_RESPONSE : submits
    
    MASTER_PROFILE ||--o{ PRACTICE : creates
    
    PRACTICE ||--|| PRACTICE_PRICING : has
    PRACTICE ||--|| PRACTICE_QUIZ : has
    PRACTICE ||--o{ BOOKING : receives
    PRACTICE ||--o{ PRACTICE : "series (parent-child)"
    
    PRACTICE_QUIZ ||--o{ QUIZ_RESPONSE : receives
    
    BOOKING ||--o| PAYMENT : "paid via"
    
    SUBSCRIPTION ||--o{ PAYMENT : "renews via"
    
    USER {
        uuid id PK
        string role "client|master|admin"
        jsonb credentials "platform-specific auth data"
        string first_name
        string last_name
        string avatar_url
        string timezone
        string language
        boolean is_active
        boolean is_verified
        timestamp created_at
        timestamp updated_at
        timestamp last_login_at
    }
    
    MASTER_PROFILE {
        uuid user_id PK,FK
        jsonb data "account, availability, profile, settings, stats"
        timestamp created_at
        timestamp updated_at
    }
    
    PRACTICE {
        uuid id PK
        uuid master_id FK
        string type "live|series|one_on_one|replay"
        string title
        text description
        timestamp scheduled_at
        int duration_minutes
        string timezone
        uuid parent_practice_id FK "nullable, for series"
        json series_metadata "nullable"
        string format "silent|guided|music"
        string level "beginner|intermediate|advanced|all"
        json state_tags "array: anxiety, focus, etc"
        int max_participants
        int current_participants
        string zoom_meeting_id
        text zoom_join_url
        text zoom_host_url
        string zoom_password
        string status "draft|scheduled|live|completed|cancelled"
        timestamp created_at
        timestamp updated_at
        timestamp starts_at "actual start time"
        timestamp ends_at "actual end time"
    }
    
    PRACTICE_PRICING {
        uuid practice_id PK,FK
        boolean is_free
        boolean requires_subscription
        int one_time_price_cents "nullable"
        string currency
        decimal platform_commission_percent
        timestamp created_at
        timestamp updated_at
    }
    
    PRACTICE_QUIZ {
        uuid practice_id PK,FK
        string quiz_type "pre_practice|post_practice"
        string title
        text description
        json questions "array of question objects"
        boolean is_required
        int time_limit_seconds "nullable"
        timestamp created_at
        timestamp updated_at
    }
    
    BOOKING {
        uuid id PK
        uuid practice_id FK
        uuid user_id FK
        string access_token UK "single-use token for Zoom"
        timestamp access_granted_at
        timestamp access_expires_at
        string status "pending|confirmed|attended|no_show|cancelled"
        uuid payment_id FK "nullable"
        timestamp joined_at "nullable"
        timestamp left_at "nullable"
        timestamp created_at
        timestamp updated_at
    }
    
    QUIZ_RESPONSE {
        uuid id PK
        uuid quiz_id FK
        uuid practice_id FK
        uuid user_id FK
        uuid booking_id FK "nullable"
        json answers "question_id: answer mapping"
        int time_taken_seconds
        timestamp created_at
    }
    
    SUBSCRIPTION {
        uuid id PK
        uuid user_id FK,UK
        string plan_type "monthly|yearly"
        int price_cents
        string currency
        string status "active|cancelled|expired|suspended"
        timestamp current_period_start
        timestamp current_period_end
        string stripe_subscription_id
        string stripe_customer_id
        timestamp cancelled_at "nullable"
        text cancellation_reason "nullable"
        timestamp created_at
        timestamp updated_at
    }
    
    PAYMENT {
        uuid id PK
        uuid user_id FK
        uuid practice_id FK "nullable"
        int amount_cents
        string currency
        string type "practice|one_on_one|recording|topup"
        string status "pending|succeeded|failed|refunded"
        string stripe_payment_intent_id
        string stripe_charge_id
        json metadata
        timestamp created_at
        timestamp updated_at
        timestamp paid_at "nullable"
    }
